--- a/.github/workflows/poetry-action.yaml
+++ b/.github/workflows/poetry-action.yaml
@@ -1,5 +1,4 @@
 name: Poetry Install
-
 on:
   push:
     branches:
@@ -20,6 +19,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
+
+      - name: Set up Graphviz
+        run: |
+          sudo apt-get install -y graphviz
 
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2
